--- a/view/component/packetloss.templ
+++ b/view/component/packetloss.templ
@@ -30,11 +30,13 @@ templ PacketLossSettings(cfg *netem.Netem) {
 
     <section x-show="enabled" x-transition>
       @fs.FloatSlider(fs.With(
+        fs.Name("loss_pct"),
         fs.Label("Percent"),
         fs.Unit("%"),
       ))
 
       @fs.FloatSlider(fs.With(
+        fs.Name("loss_corr"),
         fs.Label("Correlation"),
         fs.Unit("%"),
         fs.Optional(true),
