--- a/view/inbound.templ
+++ b/view/inbound.templ
@@ -14,5 +14,5 @@ templ InboundRulesForm(cfg *netem.Netem) {
     These settings apply to traffic entering the network controlled by the network shaper.
   </div>
 
-  @component.RulesForm(cfg)
+  @component.RulesForm("inbound", cfg)
 }
